# financialcoy

./: .gitignore  README.md  company-structure-analysis.md  pyproject.toml
examples/: budget.json  holdings.csv  transactions.csv
src/financialcoy/: __main__.py  calc.py  cli.py  expenses.py  market.py  portfolio.py
tests/: test_calc.py  test_expenses.py  test_portfolio.py
