[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financialcoy"
version = "0.1.0"
description = "Personal-finance CLI: portfolio, expenses, market data, calculators."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "financialcoy" }]
dependencies = [
    "click>=8.1",
    "pandas>=2.0",
    "yfinance>=0.2.40",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[project.scripts]
fc = "financialcoy.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
